# tool

./: CMakeLists.txt  README.md  caffe.cpp  caffe.h  main.cpp  main.h  paras.txt  shareMemory.cpp  shareMemory.h
include/: cxmisc.h
model/: mean.binaryproto  visible_plane_haar.xml
model/tank_medium/: deploy.prototxt  far.xml  mean.binaryproto  medium.xml  near.xml
